Logo, icon, Hyperlink added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,10 @@
   <div class="container">
     <div class="logo">
       <!-- <a href="{{site.baseurl}}/"><img alt="Figurit Homepage" src="{{site.baseurl}}/assets/images/logo.svg" /></a> -->
-      <a href="{{site.baseurl}}/"><img alt="Figurit Homepage" src="{{site.baseurl}}/images/desktop-logo.png" /></a>
+      <a href="{{site.baseurl}}/">
+        <!-- <img alt="Figurit Homepage" src="{{site.baseurl}}/images/desktop-logo.png" /> -->
+        <h1>Rj<span>Tax</span></h1>
+      </a>
     </div>
     <div class="logo-mobile">
       <!-- <a href="{{site.baseurl}}/"><img alt="Figurit Homepage" src="{{site.baseurl}}/assets/images/logo-mobile.svg" /></a> -->
