--- a/_includes/sub-footer.html
+++ b/_includes/sub-footer.html
@@ -9,7 +9,7 @@
                 {{ site.data.contact.email }}</a></li>
           </ul>
           <ul>
-            <li><a href="http://www.simplexhub.com/">www.simplexhub.com</a></li>
+            <li><a href="http://www.simplexhub.com/">Simplexhub</a></li>
           </ul>
         </div>
       </div>
