--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="{{site.baseurl}}/images/favicon.png">
   <link href="{{site.baseurl}}/assets/css/style.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/assets/vendor/font-awesome/css/all.min.css" rel="stylesheet">
 </head>
 <body class='page {{page.bodyClass}}'>
   {% include main-menu-mobile.html %}
@@ -19,3 +20,5 @@
   {% include google-analytics.html %}
 </body>
 </html>
+
+<script src="../assets/vendor/font-awesome/js/all.min.js"></script>
