--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -98,3 +98,66 @@
 //     }
 //   }
 // }
+
+ul{
+    list-style-type: none;
+}
+
+.page-home .call svg {
+    position: relative;
+    width: 1rem;
+    height: 1rem;
+    bottom: 0;
+}
+
+.svg-inline--fa {
+    vertical-align: middle;
+}
+
+.content a {
+    text-decoration: none;
+}
+
+.content a:hover {
+    text-decoration: underline;
+}
+
+.logo a {
+    text-decoration: none;
+    font-family: "Lora", "Helvetica Neue", Arial, sans-serif, -apple-system;
+    color: #45454a;
+}
+
+.logo a h1 {
+    font-size: 35px;
+}
+
+.logo a h1 span {
+    color: #1c3ed3;
+    font-size: 35px;
+}
+
+// .intro {
+//     padding-top: 275px;
+// }
+
+@media
+only screen and (max-width: 760px),
+(min-device-width: 380px) and (max-device-width: 760px) {
+    .intro {
+        padding-top: 275px;
+    }
+
+    .intro-small {
+        padding-top: 100px;
+        padding-bottom: 30px;
+    }
+}
+
+@media
+only screen and (max-width: 680px),
+(min-device-width: 500px) and (max-device-width: 680px) {
+    .intro {
+        padding-top: 390px;
+    }
+}
