--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,4 +21,4 @@
 </body>
 </html>
 
-<script src="../assets/vendor/font-awesome/js/all.min.js"></script>
+<script src="{{ site.baseurl }}/assets/vendor/font-awesome/js/all.min.js"></script>
