--- a/_includes/sub-footer.html
+++ b/_includes/sub-footer.html
@@ -4,8 +4,8 @@
       <div class="col-12">
         <div class="sub-footer">
           <ul>
-            <li><strong>Phone: </strong>{{ site.data.contact.phone }}</li>
-            <li><strong>Email: </strong><a href="mailto:{{ site.data.contact.email }}">
+            <li><i class="fas fa-phone-alt"></i> <strong>Phone: </strong>{{ site.data.contact.phone }}</li>
+            <li><i class="far fa-envelope"></i> <strong>Email: </strong><a href="mailto:{{ site.data.contact.email }}">
                 {{ site.data.contact.email }}</a></li>
           </ul>
           <ul>
